--- a/_modules/dnachisel/DnaOptimizationProblem/DnaOptimizationProblem.html
+++ b/_modules/dnachisel/DnaOptimizationProblem/DnaOptimizationProblem.html
@@ -250,7 +250,7 @@
 
 <span class="kn">from</span> <span class="nn">Bio.SeqRecord</span> <span class="k">import</span> <span class="n">SeqRecord</span>
 <span class="kn">from</span> <span class="nn">proglog</span> <span class="k">import</span> <span class="n">default_bar_logger</span>
-<span class="kn">from</span> <span class="nn">dnachisel.Specification.SpecificationSet</span> <span class="k">import</span> <span class="n">SpecificationSet</span>
+<span class="kn">from</span> <span class="nn">..Specification.SpecificationSet</span> <span class="k">import</span> <span class="n">SpecificationSet</span>
 <span class="kn">from</span> <span class="nn">..biotools</span> <span class="k">import</span> <span class="n">sequences_differences_array</span>
 <span class="kn">from</span> <span class="nn">..MutationSpace</span> <span class="k">import</span> <span class="n">MutationSpace</span>
 <span class="kn">from</span> <span class="nn">..reports.optimization_reports</span> <span class="k">import</span> <span class="p">(</span>
