--- a/_modules/dnachisel/builtin_specifications/codon_optimization/CodonOptimize.html
+++ b/_modules/dnachisel/builtin_specifications/codon_optimization/CodonOptimize.html
@@ -298,9 +298,9 @@
 
 <span class="sd">    codon_usage_table</span>
 <span class="sd">      Optional codon usage table of the species for which the sequence will be</span>
-<span class="sd">      codon-optimized. A dict of the form ``{&#39;*&#39;: {&quot;TGA&quot;: 0.112, &quot;TAA&quot;: 0.68},</span>
-<span class="sd">      &#39;K&#39;: ...}`` giving the RSCU table (relative usage of each codon). See</span>
-<span class="sd">      parameter ``species`` above.</span>
+<span class="sd">      codon-optimized, which can be provided instead of ``species``. A dict of</span>
+<span class="sd">      the form ``{&#39;*&#39;: {&quot;TGA&quot;: 0.112, &quot;TAA&quot;: 0.68}, &#39;K&#39;: ...}`` giving the RSCU</span>
+<span class="sd">      table (relative usage of each codon). See parameter ``species`` above.</span>
 
 <span class="sd">    original_species</span>
 <span class="sd">      When the method is &#39;harmonize_rca&#39;, this is the native species of the</span>
