--- a/_modules/index.html
+++ b/_modules/index.html
@@ -266,15 +266,18 @@
 <li><a href="dnachisel/builtin_specifications/AvoidBlastMatches.html">dnachisel.builtin_specifications.AvoidBlastMatches</a></li>
 <li><a href="dnachisel/builtin_specifications/AvoidChanges.html">dnachisel.builtin_specifications.AvoidChanges</a></li>
 <li><a href="dnachisel/builtin_specifications/AvoidHairpins.html">dnachisel.builtin_specifications.AvoidHairpins</a></li>
+<li><a href="dnachisel/builtin_specifications/AvoidMatches.html">dnachisel.builtin_specifications.AvoidMatches</a></li>
 <li><a href="dnachisel/builtin_specifications/AvoidPattern.html">dnachisel.builtin_specifications.AvoidPattern</a></li>
 <li><a href="dnachisel/builtin_specifications/AvoidStopCodons.html">dnachisel.builtin_specifications.AvoidStopCodons</a></li>
 <li><a href="dnachisel/builtin_specifications/EnforceGCContent.html">dnachisel.builtin_specifications.EnforceGCContent</a></li>
+<li><a href="dnachisel/builtin_specifications/EnforceMeltingTemperature.html">dnachisel.builtin_specifications.EnforceMeltingTemperature</a></li>
 <li><a href="dnachisel/builtin_specifications/EnforcePatternOccurence.html">dnachisel.builtin_specifications.EnforcePatternOccurence</a></li>
 <li><a href="dnachisel/builtin_specifications/EnforceRegionsCompatibility.html">dnachisel.builtin_specifications.EnforceRegionsCompatibility</a></li>
 <li><a href="dnachisel/builtin_specifications/EnforceSequence.html">dnachisel.builtin_specifications.EnforceSequence</a></li>
 <li><a href="dnachisel/builtin_specifications/EnforceTranslation.html">dnachisel.builtin_specifications.EnforceTranslation</a></li>
 <li><a href="dnachisel/builtin_specifications/SequenceLengthBounds.html">dnachisel.builtin_specifications.SequenceLengthBounds</a></li>
 <li><a href="dnachisel/builtin_specifications/UniquifyAllKmers.html">dnachisel.builtin_specifications.UniquifyAllKmers</a></li>
+<li><a href="dnachisel/builtin_specifications/codon_optimization/AvoidRareCodons.html">dnachisel.builtin_specifications.codon_optimization.AvoidRareCodons</a></li>
 <li><a href="dnachisel/builtin_specifications/codon_optimization/CodonOptimize.html">dnachisel.builtin_specifications.codon_optimization.CodonOptimize</a></li>
 <li><a href="dnachisel/builtin_specifications/codon_optimization/HarmonizeRCA.html">dnachisel.builtin_specifications.codon_optimization.HarmonizeRCA</a></li>
 <li><a href="dnachisel/builtin_specifications/codon_optimization/MatchTargetCodonUsage.html">dnachisel.builtin_specifications.codon_optimization.MatchTargetCodonUsage</a></li>
