--- a/genindex.html
+++ b/genindex.html
@@ -284,10 +284,10 @@
 </li>
       <li><a href="ref/biotools.html#dnachisel.biotools.annotate_record">annotate_record() (in module dnachisel.biotools)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ref/core_classes.html#dnachisel.MotifPssmPattern.apply_pseudocounts">apply_pseudocounts() (dnachisel.MotifPssmPattern class method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ref/core_classes.html#dnachisel.MutationSpace.MutationSpace.apply_random_mutations">apply_random_mutations() (dnachisel.MutationSpace.MutationSpace method)</a>
 </li>
       <li><a href="ref/core_classes.html#dnachisel.Specification.as_passive_objective">as_passive_objective() (dnachisel.Specification method)</a>
@@ -298,7 +298,11 @@
 </li>
       <li><a href="ref/builtin_specifications.html#dnachisel.builtin_specifications.AvoidHairpins">AvoidHairpins (class in dnachisel.builtin_specifications)</a>
 </li>
+      <li><a href="ref/builtin_specifications.html#dnachisel.builtin_specifications.AvoidMatches">AvoidMatches (class in dnachisel.builtin_specifications)</a>
+</li>
       <li><a href="ref/builtin_specifications.html#dnachisel.builtin_specifications.AvoidPattern">AvoidPattern (class in dnachisel.builtin_specifications)</a>
+</li>
+      <li><a href="ref/builtin_specifications.html#dnachisel.builtin_specifications.AvoidRareCodons">AvoidRareCodons (class in dnachisel.builtin_specifications)</a>
 </li>
       <li><a href="ref/builtin_specifications.html#dnachisel.builtin_specifications.AvoidStopCodons">AvoidStopCodons (class in dnachisel.builtin_specifications)</a>
 </li>
@@ -379,6 +383,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ref/builtin_specifications.html#dnachisel.builtin_specifications.EnforceGCContent">EnforceGCContent (class in dnachisel.builtin_specifications)</a>
+</li>
+      <li><a href="ref/builtin_specifications.html#dnachisel.builtin_specifications.EnforceMeltingTemperature">EnforceMeltingTemperature (class in dnachisel.builtin_specifications)</a>
 </li>
       <li><a href="ref/builtin_specifications.html#dnachisel.builtin_specifications.EnforcePatternOccurence">EnforcePatternOccurence (class in dnachisel.builtin_specifications)</a>
 </li>
@@ -592,10 +598,10 @@
 </li>
       <li><a href="ref/biotools.html#dnachisel.biotools.sequences_differences">sequences_differences() (in module dnachisel.biotools)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ref/biotools.html#dnachisel.biotools.sequences_differences_array">sequences_differences_array() (in module dnachisel.biotools)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ref/biotools.html#dnachisel.biotools.sequences_differences_segments">sequences_differences_segments() (in module dnachisel.biotools)</a>
 </li>
       <li><a href="ref/core_classes.html#dnachisel.Specification.shifted">shifted() (dnachisel.Specification method)</a>
@@ -605,6 +611,8 @@
       <li><a href="ref/core_classes.html#dnachisel.MutationSpace.MutationSpace.space_size">space_size() (dnachisel.MutationSpace.MutationSpace property)</a>
 </li>
       <li><a href="ref/core_classes.html#dnachisel.Specification">Specification (class in dnachisel)</a>
+</li>
+      <li><a href="ref/core_classes.html#dnachisel.MutationSpace.MutationSpace.string_representation">string_representation() (dnachisel.MutationSpace.MutationSpace method)</a>
 </li>
       <li><a href="ref/biotools.html#dnachisel.biotools.subdivide_window">subdivide_window() (in module dnachisel.biotools)</a>
 </li>
