--- a/_modules/dnachisel/SequencePattern/SequencePattern.html
+++ b/_modules/dnachisel/SequencePattern/SequencePattern.html
@@ -304,8 +304,9 @@
         <span class="n">lookahead</span><span class="o">=</span><span class="s2">&quot;loop&quot;</span><span class="p">,</span>
         <span class="n">is_palyndromic</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
     <span class="p">):</span>
-        <span class="k">if</span> <span class="n">size</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
-            <span class="n">size</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">expression</span><span class="p">)</span>
+        <span class="c1"># if size is None:</span>
+        <span class="c1">#     self.shrink_when_localized = False</span>
+        <span class="c1">#     # size = len(expression)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">expression</span> <span class="o">=</span> <span class="n">expression</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">lookahead</span> <span class="o">=</span> <span class="n">lookahead</span>
         <span class="k">if</span> <span class="n">lookahead</span> <span class="o">==</span> <span class="s2">&quot;re&quot;</span><span class="p">:</span>
