--- a/_modules/dnachisel/builtin_specifications/codon_optimization/MatchTargetCodonUsage.html
+++ b/_modules/dnachisel/builtin_specifications/codon_optimization/MatchTargetCodonUsage.html
@@ -312,8 +312,6 @@
 
 <span class="sd">    &quot;&quot;&quot;</span>
 
-    <span class="n">best_possible_score</span> <span class="o">=</span> <span class="mi">0</span>
-    <span class="n">localization_group_spread</span> <span class="o">=</span> <span class="mi">3</span>
     <span class="n">shorthand_name</span> <span class="o">=</span> <span class="s2">&quot;match_codon_usage&quot;</span>
 
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span>
@@ -363,7 +361,7 @@
                 <span class="n">score</span> <span class="o">-=</span> <span class="n">total</span> <span class="o">*</span> <span class="nb">abs</span><span class="p">(</span><span class="n">frequency_diff</span><span class="p">)</span>
                 <span class="k">if</span> <span class="n">codon_freq</span><span class="p">[</span><span class="s2">&quot;sequence&quot;</span><span class="p">]</span> <span class="o">&gt;</span> <span class="n">codon_freq</span><span class="p">[</span><span class="s2">&quot;table&quot;</span><span class="p">]:</span>
                     <span class="n">nonoptimal_aa_indices</span> <span class="o">+=</span> <span class="n">codons_positions</span><span class="p">[</span><span class="n">codon</span><span class="p">]</span>
-        <span class="k">return</span> <span class="n">score</span><span class="p">,</span> <span class="p">[</span><span class="mi">3</span> <span class="o">*</span> <span class="n">i</span> <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="n">nonoptimal_aa_indices</span><span class="p">]</span>
+        <span class="k">return</span> <span class="n">score</span><span class="p">,</span> <span class="n">nonoptimal_aa_indices</span>
 
     <span class="k">def</span> <span class="nf">evaluate</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">problem</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Evaluate on a problem&quot;&quot;&quot;</span>
@@ -389,6 +387,12 @@
     <span class="k">def</span> <span class="nf">compare_frequencies</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">codons</span><span class="p">,</span> <span class="n">text_mode</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Return a dict indicating differences between codons frequencies in</span>
 <span class="sd">        the sequence and in this specifications&#39;s codons usage table.</span>
+
+<span class="sd">        Examples</span>
+<span class="sd">        --------</span>
+
+<span class="sd">        &gt;&gt;&gt; codons = spec.get_codons(problem)</span>
+<span class="sd">        &gt;&gt;&gt; print(spec.compare_frequencies(codons)</span>
 
 <span class="sd">        Returns</span>
 <span class="sd">        -------</span>
